# llama2.c

./: .gitignore  CMakeLists.txt  run.c  train.py  train_simple.diff
